tests/bad/untyped_template.oc
/// fail: Need to specify template specialization for Foo



struct Foo<T> {
    x: T
}


def main() {
    let bar = Foo::new()
}